--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-  <title>Twilio Magic 2.0</title>
+  <title>Our Values | Twilio</title>
+  <meta name="description" content="Our values and principles define who we are, what we stand for, and guide how we work together as a company. We call it the Twilio Magic, and it’s a system of lessons and tools that enable us to do great work. Learn about what makes up the Twilio Magic, and how Twilions worldwide are using it every day.">
   <link rel="stylesheet" href="./style/atropos.min.css">
   <link rel="stylesheet" href="./style/main.css">
   <link rel="stylesheet" href="./style/nav.css">
@@ -162,6 +163,7 @@
     <section class="section-twilion js-section-twilion">
       <img class="twilion-image" src="./images/image-4.jpg" alt="">
       <header class="twilion-header js-twilion-header">
+        
         <h1 class="title">The <strong>Twilio Magic</strong> in action</h1>
         <p class="subtitle"><strong>Devon Developer</strong>, Software Engineer</p>
         <p class="description">Devon Developer, a software engineer with the Web team, lives the Twilio Magic by<strong> wearing the customers’ shoes</strong>. When requests come in for fixes or updates, Devon always takes the time to consider how her changes can affect our customers’ and users’ experience on the website. She wears the customers’ shoes by making sure everything she and her team works on is done for the customers’ benefit.</p>
@@ -531,10 +533,40 @@
 
     <section class="section-missing">
       <div class="missing-left">
-        <header class="missing-header">
-          <h2 class="missing-title">Living the Twilio Magic</h2>
-          <p class="value-sub-title">Living the <strong>Magic</strong> isn’t about using the system perfectly. It’s about trying to embody our values as consistently and as evenly as we can so that all four are in-sync. The magic is in the combination.</p>
-          <h3 class="missing-question-title">What happens when a value is missing?<h3>
+        <header class="missing-header relative">
+          <div class="js-missing-0">
+            <h2 class="missing-title">Living the Twilio Magic</h2>
+            <p class="value-sub-title">Living the <strong>Magic</strong> isn’t about using the system perfectly. It’s about trying to embody our values as consistently and as evenly as we can so that all four are in-sync. The magic is in the combination.</p>
+          </div>
+          <h3 class="absolute missing-question-title js-missing-1">What happens when a value is missing?</h3>
+          <div class="absolute missing-header js-missing-2">
+            <h3 class="missing-question-title">When <span>Positron</span> is missing:</h3>
+            <br />
+            <p class="value-sub-title">We may be acting like an <strong>impactful jerk</strong>. This means that while we’re taking ownership, acting curious, and consistently building, those around us might feel left out, hurt, or deflated. We may not be seeking out diverse perspectives or giving people the respect they deserve.</p>
+            <br />
+            <p class="value-sub-title">When <strong>Positron</strong> is missing, we’re not doing the “good” in our work that we need to do.</p>
+          </div>
+          <div class="absolute missing-header js-missing-3">
+            <h3 class="missing-question-title">When <span>Curious</span> is missing:</h3>
+            <br />
+            <p class="value-sub-title">We may be acting like a <strong>“Been There, Done That”</strong> expert. We’re building solutions, handling problems, and doing good work, but we’re not open to new ideas. We may lack humility and hesitate to take feedback or learn from mistakes.</p>
+            <br />
+            <p class="value-sub-title">When <strong>Curious</strong> is missing, we might be building good momentum, but we’re missing critical turns and adjustments along the way.</p>
+          </div>
+          <div class="absolute missing-header js-missing-4">
+            <h3 class="missing-question-title">When <span>Owner</span> is missing:</h3>
+            <br />
+            <p class="value-sub-title">We may be acting like a <strong>loveable renter</strong>. We’re building, we’re curious, and we’re doing good, but we’re not taking ownership of problems. There isn’t much long-term thinking or ruthless prioritization happening.</p>
+            <br />
+            <p class="value-sub-title">When <strong>Owner</strong> is missing, so is our ability to solve problems efficiently and for the long term.</p>
+          </div>
+          <div class="absolute missing-header js-missing-5">
+            <h3 class="missing-question-title">When <span>Builder</span> is missing:</h3>
+            <br />
+            <p class="value-sub-title">We may be acting like a <strong>pontificator</strong>. We’re owning problems, staying curious, and doing good in our work, but we’re not actually getting around to building anything.</p>
+            <br />
+            <p class="value-sub-title">When <strong>Builder</strong> is missing, we spend more time thinking about drawing the owl, and less time actually doing it.</p>
+          </div>
         </header>
       </div>
       <div class="missing-right right-text">
@@ -565,8 +597,8 @@
         </div>
       </div>
       <div class="content">
-        <h1>Living the Twilio Magic</h1>
-        <p>The <strong>Twilio Magic</strong> exists within the intersection of these four values. To embrace and demonstrate our <strong>values</strong>, with the help of our <strong>principles</strong>, is the system that enables us to truly live the Twilio Magic.</p>
+        <h1>But when it all comes together&hellip;</h1>
+        <p>The <strong>Twilio Magic</strong> truly comes alive. This may look different depending on our context, but it’s in balancing our values and embracing them as best as we can that we’re able to truly live the Twilio Magic.</p>
       </div>
     </section>
   </main>
@@ -620,7 +652,7 @@
     </nav>
   </nav>
 
-  <a href="#top" class="back-to-top has-cursor-effect">Back to top</a>
+  <a aria-label="Back to top" href="#top" class="back-to-top has-cursor-effect" title="Back to top"><img src="./images/back-to-top.svg" /></a>
 
   <div class="cursor">
     <div class="cursor-inner">
@@ -629,15 +661,15 @@
   </div>
   
   <div class="bg"></div>
-
-  <script src="./scripts/vendor/gsap.min.js"></script>
-  <script src="./scripts/vendor/scrolltrigger.min.js"></script>
-  <script src="./scripts/vendor/atropos.min.js"></script>
   
-  <script src="./scripts/gsap.js"></script>
-  <script src="./scripts/cursor.js"></script>
-  <script src="./scripts/atropos.js"></script>
-  <script src="./scripts/nav.js"></script>
+    <script src="./scripts/vendor/gsap.min.js"></script>
+    <script src="./scripts/vendor/scrolltrigger.min.js"></script>
+    <script src="./scripts/vendor/atropos.min.js"></script>
+    
+    <script src="./scripts/gsap.js"></script>
+    <script src="./scripts/cursor.js"></script>
+    <script src="./scripts/atropos.js"></script>
+    <script src="./scripts/nav.js"></script>
 </body>
 
 </html>
