--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
     <img class="twilio-sub-nav" src="./images/sub-nav.png" alt="">
   </nav>
   <!-- Magic Screen Item -->
+  <div class="responsive-circle">
+      <div class="magic-venn ml-auto mr-auto">
+        <div class="magic-venn-circle magic-venn-top-left"><a class="hero-link has-cursor-effect" href="#builders">We are <strong>Builders</strong></a></div>
+        <div class="magic-venn-circle magic-venn-top-right"><a class="hero-link has-cursor-effect" href="#owners">We are <strong>Owners</strong></a></div>
+        <div class="magic-venn-circle magic-venn-bottom-left"><a class="hero-link has-cursor-effect" href="#curious">We are <strong>Curious</strong></a></div>
+        <div class="magic-venn-circle magic-venn-bottom-right"><a class="hero-link has-cursor-effect" href="#positrons">We are <strong>Positrons</strong></a></div>
+      </div>
+  </div> 
   <section id="builders" class="content-sections-wrapper first-screen-item-wrapper">
     <div class="total-sections"></div>
     <div class="sections-wrapper">
+         
       <!-- Background Wrapper -->
       <div class="bg-wrapper" style="--left-bg:#FEF5EE; --right-bg:#FEF5EE;">
         <div class="left-bg"></div>
